--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "wabot-aq",
-  "version": "2.5.1",
+  "name": "Origami-Bot",
+  "version": "1.0.4",
   "description": "Customizable WhatsApp Bot",
   "depecrated": false,
   "main": "index.js",
@@ -19,21 +19,21 @@
     "whatsapp",
     "js-whatsapp"
   ],
-  "homepage": "https://github.com/Nurutomo/wabot-aq",
+  "homepage": "https://github.com/Chifuy/origamibot",
   "author": {
-    "name": "Nurutomo"
+    "name": "Aron"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/Nurutomo/wabot-aq.git"
+    "url": "git+https://github.com/Chifuy/origamibot.git"
   },
   "bugs": {
-    "url": "https://github.com/Nurutomo/wabot-aq/issues"
+    "url": "https://github.com/Chifuy/origamibot/issues"
   },
   "license": "GPL-3.0-or-later",
   "dependencies": {
     "@adiwajshing/baileys": "github:adiwajshing/baileys",
-    "awesome-phonenumber": "^2.54.0",
+    "awesome-phonenumber": "^2.58.0",
     "brainly-scraper-v2": "^2.0.4-1",
     "cfonts": "^2.9.3",
     "chalk": "^4.1.1",
@@ -45,17 +45,17 @@
     "google-it": "^1.6.2",
     "got": "^11.8.2",
     "human-readable": "^0.2.1",
-    "jsbarcode": "^3.11.4",
+    "jsbarcode": "^3.11.5",
     "jsdom": "^16.6.0",
     "lodash": "^4.17.21",
     "lowdb": "^2.1.0",
-    "node-fetch": "^2.6.1",
+    "node-fetch": "^2.6.2",
     "node-gtts": "^2.0.2",
     "node-webpmux": "^3.1.0",
     "qrcode": "^1.4.4",
     "qrcode-terminal": "^0.12.0",
     "similarity": "^1.2.1",
-    "socket.io": "^4.1.3",
+    "socket.io": "^4.2.0",
     "syntax-error": "^1.4.0",
     "terminal-image": "^2.0.0",
     "translate-google-api": "^1.0.4",
